syntax = "proto3";

option go_package="./;messageGRPC";
package main;

//订单请求参数
message OrderRequest {

  string orderId = 1;
  int64 timeStamp = 2;

}

//订单信息
message OrderInfo {

  string OrderId = 1;
  string OrderName = 2;
  string OrderStatus = 3;

}

service OrderService {
  rpc GetOrderInfo(OrderRequest) returns (OrderInfo);
}